--- a/index.html
+++ b/index.html
@@ -1,21 +1,140 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="az">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Topu Zıplat Oyunu</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-        canvas {
-            display: block;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Meyvə Slot Oyunu</title>
+  <style>
+    body {
+      background: #1b1b1b;
+      font-family: sans-serif;
+      color: #fff;
+      text-align: center;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 { margin-top: 10px; }
+    #balance { font-size: 18px; margin: 10px 0; }
+    #betInput {
+      padding: 8px;
+      font-size: 16px;
+      width: 100px;
+      text-align: center;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    #grid {
+      display: grid;
+      grid-template-columns: repeat(4, 60px);
+      gap: 10px;
+      justify-content: center;
+      margin-top: 20px;
+    }
+    .cell {
+      width: 60px;
+      height: 60px;
+      font-size: 30px;
+      background: #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 8px;
+      transition: transform 0.2s;
+    }
+    .spin {
+      animation: spin 0.4s ease-in-out;
+    }
+    @keyframes spin {
+      0% { transform: rotateY(0); }
+      50% { transform: rotateY(180deg); }
+      100% { transform: rotateY(0); }
+    }
+    #message {
+      margin-top: 15px;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
-    <script src="game.js"></script>
+  <h1>Meyvə Slot Oyunu</h1>
+  <div id="balance"></div>
+  <input type="number" id="betInput" placeholder="Mərc" min="1">
+  <br>
+  <button onclick="spin()">Fırlat</button>
+  <div id="grid"></div>
+  <div id="message"></div>
+
+  <script>
+    const fruits = ['🍒', '🍋', '🍉', '🍇', '🍎', '🥝'];
+    const grid = document.getElementById('grid');
+    const balanceEl = document.getElementById('balance');
+    const messageEl = document.getElementById('message');
+    const username = localStorage.getItem('username');
+    let balance = parseInt(localStorage.getItem(`balance_${username}`)) || 0;
+
+    function updateBalance() {
+      balanceEl.textContent = `Balans: ${balance} AZN`;
+    }
+
+    function createGrid() {
+      grid.innerHTML = '';
+      for (let i = 0; i < 16; i++) {
+        const cell = document.createElement('div');
+        cell.classList.add('cell');
+        grid.appendChild(cell);
+      }
+    }
+
+    function spin() {
+      const bet = parseInt(document.getElementById('betInput').value);
+      if (!bet || bet <= 0) {
+        messageEl.textContent = 'Zəhmət olmasa düzgün mərc daxil edin';
+        return;
+      }
+      if (balance < bet) {
+        messageEl.textContent = 'Balansda kifayət qədər vəsait yoxdur';
+        return;
+      }
+
+      balance -= bet;
+      updateBalance();
+      messageEl.textContent = '';
+
+      const cells = document.querySelectorAll('.cell');
+      let allEqual = true;
+      let firstValue = null;
+
+      for (let i = 0; i < cells.length; i++) {
+        const fruit = fruits[Math.floor(Math.random() * fruits.length)];
+        cells[i].textContent = fruit;
+        cells[i].classList.add('spin');
+        setTimeout(() => cells[i].classList.remove('spin'), 400);
+
+        if (i === 0) firstValue = fruit;
+        else if (fruit !== firstValue) allEqual = false;
+      }
+
+      if (allEqual) {
+        const winAmount = bet * 10;
+        balance += winAmount;
+        messageEl.textContent = `Qazandın! +${winAmount} AZN`;
+      } else {
+        messageEl.textContent = 'Uduzdun. Yenidən sına!';
+      }
+
+      localStorage.setItem(`balance_${username}`, balance);
+    }
+
+    createGrid();
+    updateBalance();
+  </script>
 </body>
 </html>
