--- a/index.html
+++ b/index.html
@@ -1,110 +1,225 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="az">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VIP Login</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
-    body {
-      margin: 0;
-      padding: 0;
-      background: radial-gradient(circle, #140033, #000);
-      font-family: 'Orbitron', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      color: #fff;
-      overflow: hidden;
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>4x4 Pro Meyvə Slotu - Arxa Planlı</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
+  body {
+    background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1470&q=80');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    color: #eee;
+    /* Üstündəki yazı və slot üçün arxa plan qaralığı */
+    background-blend-mode: darken;
+    background-color: rgba(0,0,0,0.6);
+  }
+  h1 {
+    margin-bottom: 20px;
+    text-shadow: 0 0 10px #f39c12;
+  }
+  #slot {
+    display: grid;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: repeat(4, 100px);
+    gap: 15px;
+    background: rgba(28, 40, 51, 0.85);
+    padding: 25px;
+    border-radius: 20px;
+    box-shadow: 0 0 20px 5px #f39c12aa;
+  }
+  .cell {
+    background: linear-gradient(145deg, #3c4a57, #263238);
+    border-radius: 20px;
+    box-shadow: inset 5px 5px 10px #1b242c,
+                inset -5px -5px 10px #4d616e;
+    font-size: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: default;
+    user-select: none;
+    transition: transform 0.3s ease;
+  }
+  .cell.winning {
+    animation: glow 1s infinite alternate;
+  }
+  @keyframes glow {
+    from {
+      box-shadow: 0 0 10px 4px #f39c12;
+      transform: scale(1.1);
     }
-    .container {
-      background: rgba(255, 255, 255, 0.05);
-      padding: 2rem;
-      border-radius: 20px;
-      box-shadow: 0 0 20px #ff00cc, 0 0 40px #ff00cc inset;
-      width: 300px;
-      backdrop-filter: blur(10px);
+    to {
+      box-shadow: 0 0 25px 8px #f39c12;
+      transform: scale(1.2);
     }
-    h2 {
-      text-align: center;
-      color: #ff00cc;
-      margin-bottom: 1rem;
-    }
-    input {
-      width: 100%;
-      padding: 0.7rem;
-      margin: 0.5rem 0;
-      border: none;
-      border-radius: 10px;
-      background: #fff;
-      font-family: 'Orbitron', sans-serif;
-    }
-    button {
-      width: 100%;
-      padding: 0.7rem;
-      border: none;
-      border-radius: 10px;
-      background: linear-gradient(90deg, #ff00cc, #3333ff);
-      color: white;
-      font-weight: bold;
-      margin-top: 0.5rem;
-      cursor: pointer;
-    }
-    .toggle {
-      text-align: center;
-      margin-top: 1rem;
-      font-size: 0.9rem;
-      cursor: pointer;
-      color: #ff00cc;
-    }
-  </style>
+  }
+  #controls {
+    margin-top: 30px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+  }
+  #spinBtn {
+    padding: 15px 50px;
+    font-size: 22px;
+    background: #f39c12;
+    border: none;
+    border-radius: 30px;
+    color: #1c2833;
+    font-weight: 700;
+    cursor: pointer;
+    box-shadow: 0 0 15px #f39c12cc;
+    transition: background 0.3s ease;
+  }
+  #spinBtn:disabled {
+    background: #a66e00;
+    cursor: not-allowed;
+    box-shadow: none;
+  }
+  #balance {
+    font-size: 20px;
+  }
+  #bet {
+    width: 80px;
+    font-size: 18px;
+    padding: 6px 12px;
+    border-radius: 10px;
+    border: none;
+    text-align: center;
+  }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h2 id="formTitle">Login</h2>
-    <input type="text" id="username" placeholder="Username" />
-    <input type="password" id="password" placeholder="Password" />
-    <button onclick="handleAction()">Login</button>
-    <div class="toggle" onclick="toggleMode()">Don't have an account? Register</div>
-  </div>
 
-  <script>
-    let mode = 'login';
-    const users = JSON.parse(localStorage.getItem('users')) || {};
+<h1>4x4 Pro Meyvə Slotu</h1>
+<div id="slot"></div>
 
-    function handleAction() {
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
+<div id="controls">
+  <label for="bet">Mərc (₼):</label>
+  <input type="number" id="bet" min="1" max="100" value="10" />
+  <button id="spinBtn">Spin</button>
+  <div id="balance">Balans: 1000₼</div>
+</div>
 
-      if (mode === 'login') {
-        if (users[username] && users[username] === password) {
-          alert('Login successful!');
-          localStorage.setItem('currentUser', username);
-          window.location.href = 'game.html';
-        } else {
-          alert('Invalid credentials');
-        }
-      } else {
-        if (users[username]) {
-          alert('Username already exists');
-        } else {
-          users[username] = password;
-          localStorage.setItem('users', JSON.stringify(users));
-          alert('Registered successfully. Now login.');
-          toggleMode();
-        }
+<script>
+  const fruits = ['🍎', '🍊', '🍋', '🍉', '🍇', '🍓', '🍒', '🥭'];
+  const slot = document.getElementById('slot');
+  const spinBtn = document.getElementById('spinBtn');
+  const balanceElem = document.getElementById('balance');
+  const betInput = document.getElementById('bet');
+
+  let balance = 1000;
+  let spinning = false;
+
+  // 4x4 grid yarat
+  for (let i = 0; i < 16; i++) {
+    const cell = document.createElement('div');
+    cell.classList.add('cell');
+    slot.appendChild(cell);
+  }
+
+  const cells = document.querySelectorAll('.cell');
+
+  // Spin funksiyası: təsadüfi simvollar verir
+  function spinGrid() {
+    cells.forEach(cell => {
+      const fruit = fruits[Math.floor(Math.random() * fruits.length)];
+      cell.textContent = fruit;
+      cell.classList.remove('winning');
+    });
+  }
+
+  // Qalib sətir və sütun yoxlama funksiyası
+  function checkWin() {
+    let winLines = [];
+
+    // Sətir üzrə yoxlama
+    for (let r = 0; r < 4; r++) {
+      const row = [...cells].slice(r*4, r*4+4);
+      const first = row[0].textContent;
+      if (first !== '' && row.every(c => c.textContent === first)) {
+        winLines.push(row);
       }
     }
 
-    function toggleMode() {
-      mode = mode === 'login' ? 'register' : 'login';
-      document.getElementById('formTitle').textContent = mode === 'login' ? 'Login' : 'Register';
-      document.querySelector('button').textContent = mode === 'login' ? 'Login' : 'Register';
-      document.querySelector('.toggle').textContent = mode === 'login'
-        ? "Don't have an account? Register"
-        : "Already have an account? Login";
+    // Sütun üzrə yoxlama
+    for (let c = 0; c < 4; c++) {
+      let col = [];
+      for (let r = 0; r < 4; r++) {
+        col.push(cells[r*4 + c]);
+      }
+      const first = col[0].textContent;
+      if (first !== '' && col.every(cell => cell.textContent === first)) {
+        winLines.push(col);
+      }
     }
-  </script>
+
+    return winLines;
+  }
+
+  // Qalib xətlərinə vizual effekt verir
+  function highlightWins(winLines) {
+    winLines.forEach(line => {
+      line.forEach(cell => cell.classList.add('winning'));
+    });
+  }
+
+  // Spin düyməsinə basanda spin başlasın
+  spinBtn.addEventListener('click', () => {
+    const bet = Number(betInput.value);
+    if (bet <= 0 || bet > balance) {
+      alert('Zəhmət olmasa, balansınız daxilində düzgün mərc edin.');
+      return;
+    }
+    if (spinning) return;
+
+    spinning = true;
+    spinBtn.disabled = true;
+
+    // Balansı azaldır
+    balance -= bet;
+    balanceElem.textContent = `Balans: ${balance}₼`;
+
+    // Spin animasiyası 1.2 saniyə
+    let spins = 0;
+    const spinInterval = setInterval(() => {
+      spinGrid();
+      spins++;
+      if (spins >= 15) {
+        clearInterval(spinInterval);
+
+        const wins = checkWin();
+        if (wins.length > 0) {
+          highlightWins(wins);
+          // Qalib gələn mərcin 5x-ini verir (sadə qayda)
+          let winAmount = bet * 5 * wins.length;
+          balance += winAmount;
+          alert(`Qalib oldunuz! ${winAmount}₼ qazandınız.`);
+        } else {
+          alert('Qalib olmadınız, yenidən cəhd edin!');
+        }
+
+        balanceElem.textContent = `Balans: ${balance}₼`;
+        spinBtn.disabled = false;
+        spinning = false;
+      }
+    }, 80);
+  });
+
+  // Başlanğıcda doldur
+  spinGrid();
+</script>
+
 </body>
 </html>
