--- a/public/index.html
+++ b/public/index.html
@@ -3,261 +3,225 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>4x4 Pro Meyvə Slotu - Node.js ilə</title>
+<title>4x4 Meyvə Slot</title>
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
   body {
-    background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1470&q=80');
+    margin: 0; padding: 0;
+    background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
     background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    color: #eee;
-    background-blend-mode: darken;
-    background-color: rgba(0,0,0,0.6);
-  }
-  h1 {
-    margin-bottom: 20px;
-    text-shadow: 0 0 10px #f39c12;
+    font-family: Arial, sans-serif;
+    color: #fff;
+    text-align: center;
   }
   #slot {
+    margin: 30px auto;
+    width: 400px;
+    height: 400px;
     display: grid;
-    grid-template-columns: repeat(4, 100px);
-    grid-template-rows: repeat(4, 100px);
-    gap: 15px;
-    background: rgba(28, 40, 51, 0.85);
-    padding: 25px;
-    border-radius: 20px;
-    box-shadow: 0 0 20px 5px #f39c12aa;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 10px;
+    background: rgba(0,0,0,0.5);
+    border-radius: 12px;
+    padding: 20px;
+    box-shadow: 0 0 20px #ff9800;
   }
   .cell {
-    background: linear-gradient(145deg, #3c4a57, #263238);
-    border-radius: 20px;
-    box-shadow: inset 5px 5px 10px #1b242c,
-                inset -5px -5px 10px #4d616e;
-    font-size: 60px;
+    background: #222;
+    border-radius: 8px;
+    font-size: 48px;
     display: flex;
-    align-items: center;
     justify-content: center;
-    cursor: default;
+    align-items: center;
     user-select: none;
-    transition: transform 0.3s ease;
+    box-shadow: inset 0 0 10px #ffb74d;
+    transition: transform 0.2s ease;
   }
-  .cell.winning {
-    animation: glow 1s infinite alternate;
-  }
-  @keyframes glow {
-    from {
-      box-shadow: 0 0 10px 4px #f39c12;
-      transform: scale(1.1);
-    }
-    to {
-      box-shadow: 0 0 25px 8px #f39c12;
-      transform: scale(1.2);
-    }
+  .highlight {
+    background: #ffb74d;
+    color: #000;
+    box-shadow: 0 0 15px 5px #ffd54f;
+    transform: scale(1.1);
   }
   #controls {
-    margin-top: 30px;
-    display: flex;
-    gap: 20px;
-    align-items: center;
-  }
-  #spinBtn {
-    padding: 15px 50px;
-    font-size: 22px;
-    background: #f39c12;
-    border: none;
-    border-radius: 30px;
-    color: #1c2833;
-    font-weight: 700;
-    cursor: pointer;
-    box-shadow: 0 0 15px #f39c12cc;
-    transition: background 0.3s ease;
-  }
-  #spinBtn:disabled {
-    background: #a66e00;
-    cursor: not-allowed;
-    box-shadow: none;
+    margin-top: 20px;
   }
   #balance {
-    font-size: 20px;
+    font-size: 24px;
+    margin-bottom: 15px;
+    font-weight: bold;
   }
   #bet {
     width: 80px;
     font-size: 18px;
-    padding: 6px 12px;
-    border-radius: 10px;
+    padding: 6px;
+    border-radius: 6px;
     border: none;
     text-align: center;
+  }
+  #spinBtn {
+    background: #ff9800;
+    border: none;
+    padding: 10px 25px;
+    font-size: 20px;
+    color: #000;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    margin-left: 15px;
+    transition: background 0.3s ease;
+  }
+  #spinBtn:disabled {
+    background: #ffa726aa;
+    cursor: not-allowed;
   }
 </style>
 </head>
 <body>
 
-<h1>4x4 Pro Meyvə Slotu</h1>
+<h1>4x4 Meyvə Slot</h1>
+<div id="balance">Balans: 0 ₼</div>
+
 <div id="slot"></div>
 
 <div id="controls">
-  <label for="bet">Mərc (₼):</label>
-  <input type="number" id="bet" min="1" max="100" value="10" />
-  <button id="spinBtn">Spin</button>
-  <div id="balance">Balans: ...₼</div>
+  Mərc: <input type="number" id="bet" min="1" value="10" />
+  <button id="spinBtn">Fırlat</button>
 </div>
 
 <script>
-  const fruits = ['🍎', '🍊', '🍋', '🍉', '🍇', '🍓', '🍒', '🥭'];
   const slot = document.getElementById('slot');
-  const spinBtn = document.getElementById('spinBtn');
   const balanceElem = document.getElementById('balance');
   const betInput = document.getElementById('bet');
+  const spinBtn = document.getElementById('spinBtn');
 
-  // İstifadəçi ID-si (sadə demo üçün browserdə localStorage-dan alırıq, yoxdursa yaradırıq)
+  // Meyvə emojiləri
+  const fruits = ['🍒','🍋','🍊','🍉','🍇','🍓','🥝','🍍'];
+
+  // 4x4 slot üçün 16 hüceyrə yaradılır
+  const size = 4;
+  const cells = [];
+
+  let balance = 0;
   let userId = localStorage.getItem('userId');
+
   if (!userId) {
     userId = 'user_' + Math.random().toString(36).substr(2, 9);
     localStorage.setItem('userId', userId);
   }
 
-  let balance = 0;
-  let spinning = false;
-
-  // 4x4 grid yarat
-  for (let i = 0; i < 16; i++) {
+  // Slot hüceyrələrini yarat
+  for(let i=0; i < size*size; i++) {
     const cell = document.createElement('div');
     cell.classList.add('cell');
+    cell.textContent = '❓';
     slot.appendChild(cell);
-  }
-  const cells = document.querySelectorAll('.cell');
-
-  function spinGrid() {
-    cells.forEach(cell => {
-      const fruit = fruits[Math.floor(Math.random() * fruits.length)];
-      cell.textContent = fruit;
-      cell.classList.remove('winning');
-    });
+    cells.push(cell);
   }
 
-  function checkWin() {
-    let winLines = [];
-
-    // Sətir üzrə yoxlama
-    for (let r = 0; r < 4; r++) {
-      const row = [...cells].slice(r*4, r*4+4);
-      const first = row[0].textContent;
-      if (first !== '' && row.every(c => c.textContent === first)) {
-        winLines.push(row);
-      }
-    }
-
-    // Sütun üzrə yoxlama
-    for (let c = 0; c < 4; c++) {
-      let col = [];
-      for (let r = 0; r < 4; r++) {
-        col.push(cells[r*4 + c]);
-      }
-      const first = col[0].textContent;
-      if (first !== '' && col.every(cell => cell.textContent === first)) {
-        winLines.push(col);
-      }
-    }
-
-    return winLines;
-  }
-
-  function highlightWins(winLines) {
-    winLines.forEach(line => {
-      line.forEach(cell => cell.classList.add('winning'));
-    });
+  // Balansı serverdən gətir
+  function fetchBalance() {
+    fetch(`http://localhost:3000/balance/${userId}`)
+      .then(res => res.json())
+      .then(data => {
+        balance = data.balance;
+        updateBalanceDisplay();
+      });
   }
 
   function updateBalanceDisplay() {
-    balanceElem.textContent = `Balans: ${balance}₼`;
+    balanceElem.textContent = `Balans: ${balance} ₼`;
   }
 
-  // Serverdən balansı götürək
-  async function fetchBalance() {
-    const res = await fetch(`http://localhost:3000/balance/${userId}`);
-    if (res.ok) {
-      const data = await res.json();
-      balance = data.balance;
-      updateBalanceDisplay();
-    } else {
-      alert('Balansı almaq mümkün olmadı.');
+  // Qalib sətir və sütunları tapıb vurğulamaq üçün
+  function findWinningLines(grid) {
+    const highlights = [];
+
+    // Yatay sətirlər (4)
+    for(let r=0; r < size; r++) {
+      let rowSet = new Set();
+      for(let c=0; c < size; c++) {
+        rowSet.add(grid[r*size + c]);
+      }
+      if(rowSet.size === 1) {
+        for(let c=0; c < size; c++) highlights.push(r*size + c);
+      }
     }
+
+    // Şaquli sütunlar (4)
+    for(let c=0; c < size; c++) {
+      let colSet = new Set();
+      for(let r=0; r < size; r++) {
+        colSet.add(grid[r*size + c]);
+      }
+      if(colSet.size === 1) {
+        for(let r=0; r < size; r++) highlights.push(r*size + c);
+      }
+    }
+    return highlights;
   }
 
-  spinBtn.addEventListener('click', async () => {
-    const bet = Number(betInput.value);
-    if (bet <= 0 || bet > balance) {
-      alert('Zəhmət olmasa, balansınız daxilində düzgün mərc edin.');
+  // Fırlat düyməsi klik
+  spinBtn.addEventListener('click', () => {
+    let bet = Number(betInput.value);
+    if (isNaN(bet) || bet < 1) {
+      alert('Zəhmət olmasa düzgün mərc daxil edin!');
       return;
     }
-    if (spinning) return;
+    if (bet > balance) {
+      alert('Balansınız kifayət etmir!');
+      return;
+    }
 
-    spinning = true;
     spinBtn.disabled = true;
 
     let spins = 0;
-    const spinInterval = setInterval(() => {
-      spinGrid();
+    const maxSpins = 20;
+    let finalGrid = [];
+
+    const interval = setInterval(() => {
+      let grid = [];
+      for(let i=0; i < size*size; i++) {
+        const fruit = fruits[Math.floor(Math.random() * fruits.length)];
+        cells[i].textContent = fruit;
+        grid.push(fruit);
+      }
       spins++;
-      if (spins >= 15) {
-        clearInterval(spinInterval);
+      if(spins === maxSpins) {
+        clearInterval(interval);
+        finalGrid = grid;
 
-        const wins = checkWin();
-        if (wins.length > 0) {
-          highlightWins(wins);
+        // Qalib xətlər tapılır
+        const wins = findWinningLines(finalGrid);
+        cells.forEach(cell => cell.classList.remove('highlight'));
+        wins.forEach(i => cells[i].classList.add('highlight'));
 
-          // Qazanc multiplikatoru: 5x qalib, yoxsa 0
-          const winMultiplier = 5;
+        // Qalibdirsə 5x multiplikator
+        const isWin = wins.length > 0;
+        const winMultiplier = isWin ? 5 : 0;
 
-          // Serverə balansı yenilə
-          fetch(`http://localhost:3000/play/${userId}`, {
-            method: 'POST',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify({ bet, winMultiplier })
-          })
-          .then(res => res.json())
-          .then(data => {
-            balance = data.balance;
-            updateBalanceDisplay();
-            alert('Qalib oldunuz!');
-          })
-          .catch(() => {
-            alert('Server ilə əlaqə xətası.');
-          });
-
-        } else {
-          // Uduzduqda multiplikator 0
-          fetch(`http://localhost:3000/play/${userId}`, {
-            method: 'POST',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify({ bet, winMultiplier: 0 })
-          })
-          .then(res => res.json())
-          .then(data => {
-            balance = data.balance;
-            updateBalanceDisplay();
-            alert('Qalib olmadınız, yenidən cəhd edin!');
-          })
-          .catch(() => {
-            alert('Server ilə əlaqə xətası.');
-          });
-        }
-
-        spinBtn.disabled = false;
-        spinning = false;
+        // Serverə mərc və qalibiyyət göndər
+        fetch(`http://localhost:3000/play/${userId}`, {
+          method: 'POST',
+          headers: {'Content-Type':'application/json'},
+          body: JSON.stringify({ bet, winMultiplier })
+        })
+        .then(res => res.json())
+        .then(data => {
+          balance = data.balance;
+          updateBalanceDisplay();
+          alert(isWin ? 'Qalib oldunuz!' : 'Qalib olmadınız, yenidən cəhd edin!');
+          spinBtn.disabled = false;
+        })
+        .catch(() => {
+          alert('Server əlaqəsi xətası.');
+          spinBtn.disabled = false;
+        });
       }
     }, 80);
   });
 
-  fetchBalance();  // Sayt yüklənəndə balansı serverdən alırıq
+  fetchBalance();
 </script>
 
 </body>
